--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -1600,7 +1600,7 @@
    "source": [
     "Eine Funktion, get_feature_combinations(features), wird definiert, um alle möglichen Kombinationen von Features aus einer gegebenen Feature-Liste zu generieren. Dabei werden Kombinationen von jeweils acht Features erstellt. Die generierte Liste wird zurückgegeben.\n",
     "\n",
-    "Über die Anzahl der Features kann noch diskutiert werden."
+    "Über die Anzahl der Features kann noch diskutiert werden. (Aus Gründen der Effizienz wurden hier nur acht ausgewählt und dennoch nimmt es mindestens 45 Minuten in Anspruch.)"
    ]
   },
   {
@@ -1729,6 +1729,173 @@
    ],
    "source": [
     "result_models.sort_values(\"mae\", ascending=True).iloc[0, 0].coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>features</th>\n",
+       "      <th>r2</th>\n",
+       "      <th>mae</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23896</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(season, yr, atemp, weekday_0, weekday_1, week...</td>\n",
+       "      <td>0.842169</td>\n",
+       "      <td>571.295092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23897</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(season, yr, atemp, weekday_0, weekday_1, week...</td>\n",
+       "      <td>0.842169</td>\n",
+       "      <td>571.295092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23895</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(season, yr, atemp, weekday_0, weekday_1, week...</td>\n",
+       "      <td>0.842169</td>\n",
+       "      <td>571.295092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23152</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(season, yr, atemp, windspeed, weekday_0, week...</td>\n",
+       "      <td>0.839916</td>\n",
+       "      <td>571.434182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23154</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(season, yr, atemp, windspeed, weekday_0, week...</td>\n",
+       "      <td>0.839916</td>\n",
+       "      <td>571.434182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165381</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(holiday, workingday, hum, leaflets, weekday_0...</td>\n",
+       "      <td>-0.018310</td>\n",
+       "      <td>1542.186478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188251</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(workingday, hum, leaflets, weekday_0, weekday...</td>\n",
+       "      <td>-0.018310</td>\n",
+       "      <td>1542.186478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188121</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(workingday, hum, leaflets, price reduction, w...</td>\n",
+       "      <td>-0.017442</td>\n",
+       "      <td>1542.274882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188009</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(workingday, hum, leaflets, price reduction, w...</td>\n",
+       "      <td>-0.014017</td>\n",
+       "      <td>1543.991902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188125</th>\n",
+       "      <td>LinearRegression(n_jobs=14)</td>\n",
+       "      <td>(workingday, hum, leaflets, price reduction, w...</td>\n",
+       "      <td>-0.019057</td>\n",
+       "      <td>1545.028324</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>203490 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              model  \\\n",
+       "23896   LinearRegression(n_jobs=14)   \n",
+       "23897   LinearRegression(n_jobs=14)   \n",
+       "23895   LinearRegression(n_jobs=14)   \n",
+       "23152   LinearRegression(n_jobs=14)   \n",
+       "23154   LinearRegression(n_jobs=14)   \n",
+       "...                             ...   \n",
+       "165381  LinearRegression(n_jobs=14)   \n",
+       "188251  LinearRegression(n_jobs=14)   \n",
+       "188121  LinearRegression(n_jobs=14)   \n",
+       "188009  LinearRegression(n_jobs=14)   \n",
+       "188125  LinearRegression(n_jobs=14)   \n",
+       "\n",
+       "                                                 features        r2  \\\n",
+       "23896   (season, yr, atemp, weekday_0, weekday_1, week...  0.842169   \n",
+       "23897   (season, yr, atemp, weekday_0, weekday_1, week...  0.842169   \n",
+       "23895   (season, yr, atemp, weekday_0, weekday_1, week...  0.842169   \n",
+       "23152   (season, yr, atemp, windspeed, weekday_0, week...  0.839916   \n",
+       "23154   (season, yr, atemp, windspeed, weekday_0, week...  0.839916   \n",
+       "...                                                   ...       ...   \n",
+       "165381  (holiday, workingday, hum, leaflets, weekday_0... -0.018310   \n",
+       "188251  (workingday, hum, leaflets, weekday_0, weekday... -0.018310   \n",
+       "188121  (workingday, hum, leaflets, price reduction, w... -0.017442   \n",
+       "188009  (workingday, hum, leaflets, price reduction, w... -0.014017   \n",
+       "188125  (workingday, hum, leaflets, price reduction, w... -0.019057   \n",
+       "\n",
+       "                mae  \n",
+       "23896    571.295092  \n",
+       "23897    571.295092  \n",
+       "23895    571.295092  \n",
+       "23152    571.434182  \n",
+       "23154    571.434182  \n",
+       "...             ...  \n",
+       "165381  1542.186478  \n",
+       "188251  1542.186478  \n",
+       "188121  1542.274882  \n",
+       "188009  1543.991902  \n",
+       "188125  1545.028324  \n",
+       "\n",
+       "[203490 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_models.sort_values(\"mae\", ascending=True)"
    ]
   }
  ],
