removed time based splitting from model optimization, prepared for model validation

--- a/project/task_1.ipynb
+++ b/project/task_1.ipynb
@@ -2955,27 +2955,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Leaflets\n",
+      "2011: 6520\n",
+      "2012: 262842\n",
+      "Percent Increase: -4.6945309638890595\n",
+      "\n",
       "Casual\n",
-      "247656\n",
-      "358625\n",
-      "44.80771715605517\n",
+      "2011: 247656\n",
+      "2012: 358625\n",
+      "Percent Increase: 44.80771715605517\n",
       "\n",
       "Registered\n",
-      "999341\n",
-      "1648631\n",
-      "64.9718164270254\n",
+      "2011: 999341\n",
+      "2012: 1648631\n",
+      "Percent Increase: 64.9718164270254\n",
       "\n",
       "Total\n",
-      "1246997\n",
-      "2007256\n",
-      "60.96718757142159\n"
+      "2011: 1246997\n",
+      "2012: 2007256\n",
+      "Percent Increase: 60.96718757142159\n"
      ]
     }
    ],
@@ -2983,7 +2988,12 @@
     "def percent_increase(data_2011, data_2012):\n",
     "    return (data_2012 - data_2011) / data_2011 * 100\n",
     "\n",
-    "print('Casual')\n",
+    "print('Leaflets')\n",
+    "print(f\"2011: {data_2011['leaflets'].sum()}\")\n",
+    "print(f\"2012: {data_2012['leaflets'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011['leaflets'].sum(), data_2012['leaflets'].sum())}\")\n",
+    "\n",
+    "print('\\nCasual')\n",
     "print(f\"2011: {data_2011['casual'].sum()}\")\n",
     "print(f\"2012: {data_2012['casual'].sum()}\")\n",
     "print(f\"Percent Increase: {percent_increase(data_2011['casual'].sum(), data_2012['casual'].sum())}\")\n",
@@ -2997,6 +3007,142 @@
     "print(f\"2011: {data_2011['cnt'].sum()}\")\n",
     "print(f\"2012: {data_2012['cnt'].sum()}\")\n",
     "print(f\"Percent Increase: {percent_increase(data_2011['cnt'].sum(), data_2012['cnt'].sum())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaflets\n",
+      "2011: 6520\n",
+      "2012: 7960\n",
+      "Percent Increase: 22.085889570552148\n",
+      "\n",
+      "Casual\n",
+      "2011: 9748\n",
+      "2012: 12611\n",
+      "Percent Increase: 29.37012720558063\n",
+      "\n",
+      "Registered\n",
+      "2011: 20274\n",
+      "2012: 35802\n",
+      "Percent Increase: 76.59070730985499\n",
+      "\n",
+      "Total\n",
+      "2011: 30022\n",
+      "2012: 48413\n",
+      "Percent Increase: 61.25841049896742\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Leaflets')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 1]['leaflets'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 1]['leaflets'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 1]['leaflets'].sum(), data_2012[data_2012['holiday'] == 1]['leaflets'].sum())}\")\n",
+    "\n",
+    "print('\\nCasual')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 1]['casual'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 1]['casual'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 1]['casual'].sum(), data_2012[data_2012['holiday'] == 1]['casual'].sum())}\")\n",
+    "\n",
+    "print('\\nRegistered')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 1]['registered'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 1]['registered'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 1]['registered'].sum(), data_2012[data_2012['holiday'] == 1]['registered'].sum())}\")\n",
+    "\n",
+    "print('\\nTotal')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 1]['cnt'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 1]['cnt'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 1]['cnt'].sum(), data_2012[data_2012['holiday'] == 1]['cnt'].sum())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaflets\n",
+      "2011: 269269\n",
+      "2012: 254882\n",
+      "Percent Increase: -5.3429841533930755\n",
+      "\n",
+      "Casual\n",
+      "2011: 237908\n",
+      "2012: 346014\n",
+      "Percent Increase: 45.440254215915395\n",
+      "\n",
+      "Registered\n",
+      "2011: 979067\n",
+      "2012: 1612829\n",
+      "Percent Increase: 64.73121859893143\n",
+      "\n",
+      "Total\n",
+      "2011: 1216975\n",
+      "2012: 1958843\n",
+      "Percent Increase: 60.96000328683827\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Leaflets')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 0]['leaflets'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 0]['leaflets'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 0]['leaflets'].sum(), data_2012[data_2012['holiday'] == 0]['leaflets'].sum())}\")\n",
+    "\n",
+    "print('\\nCasual')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 0]['casual'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 0]['casual'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 0]['casual'].sum(), data_2012[data_2012['holiday'] == 0]['casual'].sum())}\")\n",
+    "\n",
+    "print('\\nRegistered')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 0]['registered'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 0]['registered'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 0]['registered'].sum(), data_2012[data_2012['holiday'] == 0]['registered'].sum())}\")\n",
+    "\n",
+    "print('\\nTotal')\n",
+    "print(f\"2011: {data_2011[data_2011['holiday'] == 0]['cnt'].sum()}\")\n",
+    "print(f\"2012: {data_2012[data_2012['holiday'] == 0]['cnt'].sum()}\")\n",
+    "print(f\"Percent Increase: {percent_increase(data_2011[data_2011['holiday'] == 0]['cnt'].sum(), data_2012[data_2012['holiday'] == 0]['cnt'].sum())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['dteday'] = pd.to_datetime(data['dteday'], format='%d.%m.%Y')\n",
+    "data['year'] = data['dteday'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2011, 2012], dtype=int32)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['year'].unique()"
    ]
   },
   {
