--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -1716,6 +1716,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Für die Variablen `weekday` und `weathersit` erstellen wir mittels One Hot Encoding separate binäre Spalten für jede Ausprägung. Anschließend entfernen wir die ursprünglichen zwei Spalten."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 219,
    "metadata": {},
@@ -2212,7 +2219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
