--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -11,13 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- new variable unregistered (cnt - registered)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 1 Setup"
    ]
   },
@@ -82,14 +75,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create a baseline linear regression model using the originally provided training \n",
-    "dataset with minimal preprocessing and evaluate it with your validation dataset based on accuracies (MAE) and coefficient of determination (𝑅²)**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Während unserer ersten Analysen in Task 1 ist uns aufgefallen, dass die Variablen `season` und `hum` fehlende Werte aufweisen. Als Default-Methode und im Sinne von Minimal Preprocessing sollen die Zeilen mit fehlenden Werten entfernt werden.\n",
     "Optionale Methoden zum Umgang mit fehlenden Werten werden im weiteren Verlauf addressiert."
    ]
@@ -114,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Summe von casual und registered ergibt cnt, daher entfernen wir diese Spalten aus dem Datensatz."
+    "Die Summe von `casual` und `registered` ergibt `cnt`, daher entfernen wir diese Spalten aus dem Datensatz. Zudem wird die Spalte `dteday` sowie das y_label von der Features-Liste entfernt."
    ]
   },
   {
@@ -183,17 +168,6 @@
    "metadata": {},
    "source": [
     "## 5 Other Options for Missing Value Handling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Preprocess the original datasets to address the identified data quality issues e.g. Missing values, Outliers, Features to be transformed (e.g. normalization). Check the effect of each preprocessing step with your validation data set* building additional linear regression models**\n",
-    "\n",
-    "Einfluss auf R2 und MAE prüfen\n",
-    "\n",
-    "Hier jetzt zum Beispiel verschiedene Imputation Strategien"
    ]
   },
   {
@@ -677,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fehlende Werte in der Spalte `hum` werden durch den Mittelwert ersetzt. (Wir können über andere Ersetzungswerte noch diskutieren!)"
+    "Fehlende Werte in der Spalte `hum` werden durch den Mittelwert ersetzt. Wir haben auch ausprobiert die fehlenden Werte durch den Median zu ersetzen. Dies hat aber zu keinen nennenswerten Unterschieden oder Verbesserungen geführt."
    ]
   },
   {
@@ -832,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hier würde sich ggf. eine Regression Imputation zum Auffüllen der vier fehlenden Werte anbieten. Aus der Correlation Matrix sehen wir aber, dass windspeed kaum mit anderen Features correliert. Aus diesem Grund droppen wir die Werte."
+    "Hier würde sich ggf. eine Regression Imputation zum Auffüllen der vier fehlenden Werte anbieten. Aus der Correlation Matrix sehen wir aber, dass `windspeed` kaum mit anderen Features korreliert. Aus diesem Grund entfernen wir die Werte."
    ]
   },
   {
@@ -926,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es ist zu sehen, dass die Gesamtanzahl und die Zahl der nicht registrierten Nutzer einen sehr hohen Maximalwert haben. Die Gesamtzahl wird aus registrierten Nutzern + nicht registrierten Nutzern hergeleitet -> Die Outlier werden mittels der `casual` Spalte ermittelt."
+    "Es ist zu sehen, dass die Gesamtanzahl und die Zahl der nicht registrierten Nutzer einen sehr hohen Maximalwert haben. Die Gesamtzahl wird aus registrierten Nutzern und nicht registrierten Nutzern hergeleitet. Die Outlier werden dann mittels der `casual` Spalte ermittelt."
    ]
   },
   {
@@ -1197,10 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aus dem Grund, dass cnt die Summe aus casual und registered ist, wird beim entfernen der Outlier von casual auch die Outlier von cnt entfernt. Weil wir die row droppen. \n",
-    "\n",
-    "-> nur werte droppen?\n",
-    "-> hum wert anschauen"
+    "Da `cnt` die Summe aus `casual` und `registered` ist, werden beim Entfernen der Outlier von `casual` auch die Outlier von `cnt` entfernt."
    ]
   },
   {
@@ -2190,7 +2161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Export the pre-processed training, validation and test dataset to a CSV"
+    "Zuletzt exportieren wir das Datenset als CSV."
    ]
   },
   {
