Update Kommentar zu zeitlicher Entwicklung

--- a/project/task_1.ipynb
+++ b/project/task_1.ipynb
@@ -1688,7 +1688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In den Barplots der Verteilungen ist bei manchen Features nicht erkenntlich ob diese normalverteilt sind, daher schauen wir uns diese noch einmal nach einer Quantile Transformation an."
+    "In den Barplots der Verteilungen ist bei manchen Features nicht erkenntlich, ob diese normalverteilt sind, daher schauen wir uns diese noch einmal nach einer Quantile Transformation an."
    ]
   },
   {
@@ -1731,7 +1731,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diese Darstellung deck sich mit den Boxplots und zeigt, dass die Spalten normalverteilt sind. Bei weekday ist eine mäßige Linksschiefe zu erkennen."
+    "Diese Darstellung deckt sich mit den Boxplots und zeigt, dass die Variablen normalverteilt sind. Bei `weekday` ist eine mäßige Linksschiefe zu erkennen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 Weitere Erkenntnisse in Bezug auf die Response-Variablen"
    ]
   },
   {
@@ -2072,6 +2079,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Es ist erkennbar, dass der dominante User-Typ registrierte Nutzer und nicht Gelegenheitskunden sind. Die regelmäßige Nutzung von Bike Rentals hat sich also bestätigt, denn an 724 Tagen (99%) sind mehr Fahrräder von registrierten Nutzern ausgeliehen worden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Most likely outliers"
    ]
   },
@@ -2132,11 +2146,6 @@
     "df['percent'] = df.apply(lambda x : round((x / len(data))*100, 2), axis=1)\n",
     "print(df)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3146,18 +3155,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Schaut man sich die Entwicklung über die zwei Jahre innerhalb des Datensatzes genauer an, so kommt man zu folgenden **Erkenntnissen**:\n",
+    "\n",
+    "- `leaflets`: Die Anzahl verteilerter Flyer ging von 2011 auf 2012 um 5% zurück.\n",
+    "- `casual`: Die Anzahl an Rädern, die von Gelegenheitskunden ausgeliehen wurde, hat von 2011 auf 2012 um 45% zugenommen.\n",
+    "- `registered`: Die Anzahl an Rädern, die von registrierten Nutzer ausgeliehen wurde, hat in diesem Zeitraum um 65% zugenommen.\n",
+    "- `cnt`: Insgesamt hat die Summe aller ausgeliehenen Räder von 2011 auf 2012 um 61% zugenommen."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "introduction-data-science",
    "language": "python",
-   "name": "introduction-data-science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3169,7 +3183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
