--- a/project/task_1.ipynb
+++ b/project/task_1.ipynb
@@ -2052,13 +2052,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Means there are only 3 days where the more casual rentals are done then registered."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -2078,6 +2071,13 @@
     "df = pd.DataFrame({'days': data.groupby('dominant_user_type').size()})\n",
     "df['percent'] = df.apply(lambda x : round((x / len(data))*100, 2), axis=1)\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im Folgenden sind die Beobachtungen im Datenset aufgeführt, bei denen `casual` der dominante User-Type ist. Es handelt sich hier lediglich um acht Beobachtungen. Schaut man sich die Werte in der Zeile `casual` genauer an, fällt jedoch auf, dass es sich vor allem bei den Beobachtungen 448, 505, 624, 631 und 638 um Ausreißer handeln muss."
    ]
   },
   {
@@ -2420,6 +2420,13 @@
     "\n",
     "data_2011 = split_data_by_year(data, 0)\n",
     "data_2012 = split_data_by_year(data, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit der describe-Methode wollen wir uns die Daten nun nochmals getrennt für die Jahre 2011 und 2012 ansehen. Es fällt auf, dass die maximalen Werte in 2012 deutlich höher sind, sowohl für `registered`, `casual`, als auch für `cnt`. Die Ausreißer müssen in den Daten für 2012 vorliegen."
    ]
   },
   {
@@ -3118,7 +3125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Schaut man sich die Entwicklung über die zwei Jahre innerhalb des Datensatzes genauer an, so kommt man zu folgenden **Erkenntnissen**:\n",
+    "Schaut man sich die Entwicklung über die zwei Jahre innerhalb des Datensatzes nochmals genauer an, so kommt man zu folgenden **Erkenntnissen**:\n",
     "\n",
     "- `leaflets`: Die Anzahl verteilerter Flyer ging von 2011 auf 2012 um 5% zurück.\n",
     "- `casual`: Die Anzahl an Rädern, die von Gelegenheitskunden ausgeliehen wurde, hat von 2011 auf 2012 um 45% zugenommen.\n",
@@ -3131,7 +3138,7 @@
   "kernelspec": {
    "display_name": "introduction-data-science",
    "language": "python",
-   "name": "introduction-data-science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3143,7 +3150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
